--- a/pom.xml
+++ b/pom.xml
@@ -72,9 +72,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jboss.resteasy</groupId>
-            <artifactId>resteasy-client</artifactId>
-            <version>3.0.9.Final</version>
+            <groupId>org.glassfish.jersey.core</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>2.13</version>
             <scope>test</scope>
         </dependency>
 
