--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,6 +11,6 @@
     </servlet>
     <servlet-mapping>
         <servlet-name>dmsServlet</servlet-name>
-        <url-pattern>/storage/documents*</url-pattern>
+        <url-pattern>/storage/documents/*</url-pattern>
     </servlet-mapping>
 </web-app>
