configure  tomcat7:-run-war on port 8888.

--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
                     <path>/</path>
                     <warDirectory>${project.build.directory}/${artifactId}</warDirectory>
                     <uriEncoding>UTF-8</uriEncoding>
+                    <port>8888</port>
                 </configuration>
             </plugin>
 
